# Fusillade

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  INSTALL.md  README.md  build.rs  docker-compose.yaml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
config/: arrival-rate.json  arrival-rate.yaml  basic.json  chaos.json  chaos.yaml  local.yaml  multi-scenario.json  multi-scenario.yaml  ramping.json  ramping.yaml  soak-test.json  soak-test.yaml  stress-test.json  stress-test.yaml  test_config.yaml
k8s/: controller.yaml  namespace.yaml  worker.yaml
npm/: install.js  package.json
proto/: cluster.proto
scenarios/: amqp_consume_test.js  amqp_test.js  arrival_rate_test.js  assertion_local.js  assertion_test.js  auth_test.js  browser_test.js  check_test.js  client_pool_test.js  compression_test.js  config_test.js  converted_flow.js  cookie_test.js  criteria_test.js  crypto_test.js  custom_metrics.js  data_test.js  env_test.js  error_handling_test.js  error_test.js  error_test_stack.js  exec_test.js  export_test.js  fail_check.js  graphql_test.js  group_test.js  grpc_streaming_test.js  grpc_test.js  headers_test.js  hmac_test.js  http_test.js  import_test.js  iterations_test.js  json_response_test.js  large_payload_test.js  lifecycle-test.js  metrics_api_test.js  mqtt_subscribe_test.js  mqtt_test.js  multi_scenario_test.js  (+30 more)
scripts/: test-distributed.sh
src/: lib.rs  main.rs  utils.rs
src/bridge/: amqp.rs  browser.rs  check.rs  crypto.rs  data.rs  encoding.rs  file.rs  group.rs  grpc.rs  http.rs  http_sync.rs  metrics.rs  mod.rs  mqtt.rs  replay.rs  sse.rs  stats.rs  test.rs  utils.rs  ws.rs
src/cli/: bundler.rs  cloud.rs  config.rs  har.rs  init.rs  mod.rs  openapi.rs  recorder.rs  types.rs  validate.rs
src/cluster/: mod.rs
src/engine/: control.rs  distributed.rs  http_client.rs  io_bridge.rs  memory.rs  mod.rs  typescript.rs
src/stats/: csv.rs  db.rs  html.rs  mod.rs  mod_backup.rs  otlp.rs  statsd.rs
src/tui/: dashboard.html  index.html  mod.rs  ui.rs
support/: helpers.ts  math.js
testdata/: sample.har
