[package]
name = "fusillade"
version = "0.6.4"
edition = "2021"
default-run = "fusillade"

[dependencies]
tokio = { version = "1", features = ["full"] }
rquickjs = { version = "0.11", features = ["loader", "futures", "macro", "classes", "properties"] } # Removed full-async to avoid runtime conflict
ureq = { version = "2.10", features = ["json", "cookies"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "cookies", "http2", "brotli", "gzip", "multipart", "stream"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
ratatui = "0.29.0"
crossterm = "0.29.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["full"] }
hdrhistogram = "7.5.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
chrono = { version = "0.4.42", features = ["serde"] }
cookie_store = "0.21"
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
rumqttc = "0.24"
lapin = "2.5"
amq-protocol = "7.1"

# gRPC
tonic = { version = "0.12", features = ["codegen", "tls", "tls-roots", "transport"] }
prost = { version = "0.13", features = ["derive"] }
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"
futures = "0.3"
http = "1"
libc = "0.2"
schemars = { version = "1.2.0", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
regex = "1.12.2"
tokio-stream = "0.1.17"
headless_chrome = "1.0.18"
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "tls12", "logging", "ring"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
atty = "0.2"
dirs = "5.0"

# High-performance concurrency primitives
crossbeam-channel = "0.5"
parking_lot = "0.12"
arc-swap = "1.7"
num_cpus = "1.16"

# Green threads / stackful coroutines
may = "0.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"

[lib]
name = "fusillade"
path = "src/lib.rs"

[[bin]]
name = "fusillade"
path = "src/main.rs"

[[bin]]
name = "fusi"
path = "src/bin/fusi.rs"

[profile.release]
lto = "thin"
